# stella

./: .env.example  README.md  TODO.md  api.py  dependencies.md  downloader.py  main.py  pyproject.toml
outputs/: get_playlist_items.json
src/stella/: api.py  downloader.py  main.py
